[package]
name = "uart"
version = "0.1.0"
authors = ["KKatsuaki <kami0731mae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic= "abort"

[features]
default = []
raspi3 = []
raspi4 = []


